--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
                 <div class="row">
                     <div class="col-xl-3 col-lg-3 col-md-5 d-flex align-items-center">
                         <div class="logo">
-                            <a href="index.php"><h2 style="color:#106cd5; font-size: 45px;">GMIIT</h2></a>
+                            <a href="index.html"><h2 style="color:#106cd5; font-size: 45px;">GMIIT</h2></a>
                         </div>
                     </div>
                     <div class="col-xl-9 col-lg-9 col-md-9">
                         <div class="header-right f-right d-none d-lg-block">
-                            <a href="contact.php" class="bt-btn btn-h-white" style="margin-top: -0.6em;">Contact Us</a>
+                            <a href="contact.html" class="bt-btn btn-h-white" style="margin-top: -0.6em;">Contact Us</a>
                         </div>
                         <div class="header__menu f-right">
                             <nav id="mobile-menu">
